--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-tweet": "^3.0.4",
     "react-vertical-timeline-component": "^3.6.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
