--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@supabase/auth-helpers-nextjs": "latest",
@@ -16,6 +18,7 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
     "lucide-react": "^0.264.0",
     "nanoid": "^4.0.2",
     "next": "latest",
@@ -23,6 +26,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-embed": "^3.7.0",
     "react-icons": "^4.10.1",
     "react-tweet": "^3.0.4",
     "react-vertical-timeline-component": "^3.6.0",
