--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.3",
@@ -11,6 +12,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@supabase/auth-helpers-nextjs": "latest",
@@ -30,6 +32,7 @@
     "react-icons": "^4.10.1",
     "react-tweet": "^3.0.4",
     "react-vertical-timeline-component": "^3.6.0",
+    "recharts": "^2.7.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
@@ -41,6 +44,8 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "@types/react-vertical-timeline-component": "^3.3.3",
-    "encoding": "^0.1.13"
+    "encoding": "^0.1.13",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.13"
   }
 }
