--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@supabase/auth-helpers-nextjs": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/mapbox-gl": "^2.7.13",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "lucide-react": "^0.264.0",
+    "mapbox-gl": "^2.15.0",
     "nanoid": "^4.0.2",
     "next": "latest",
     "next-themes": "^0.2.1",
@@ -30,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-embed": "^3.7.0",
     "react-icons": "^4.10.1",
+    "react-map-gl": "^7.1.3",
     "react-tweet": "^3.0.4",
     "react-vertical-timeline-component": "^3.6.0",
     "recharts": "^2.7.3",
